fixed burger-menu z-index

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -83,6 +83,7 @@
 
 .navbar-light .navbar-toggler {
   background-color: white;
+  z-index: 11;
 }
 
 @media (max-width: 991px) {
